// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TemplateStudioSubHeader tests should match snapshot 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main subHeader StyledProps--padding-right-xlarge StyledProps--padding-left-xlarge StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200 StyledProps--background-white"
    style="height: 49px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      style="height: 100%;"
    >
      <div
        class="template-studio-sub-header-left-view-mock"
      />
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="PillToggle--optionBtns visualYamlToggle"
        >
          <div
            class="PillToggle--item PillToggle--selected"
            data-name="toggle-option-one"
            role="button"
            tabindex="0"
          >
            VISUAL
          </div>
          <div
            class="PillToggle--item"
            data-name="toggle-option-two"
            role="button"
            tabindex="0"
          >
            YAML
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <div
                class="save-template-popover-mock"
              />
              <button
                class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                disabled=""
                tabindex="-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  common.discard
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TemplateStudioSubHeader tests should match snapshot in read only mode 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main subHeader StyledProps--padding-right-xlarge StyledProps--padding-left-xlarge StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200 StyledProps--background-white"
    style="height: 49px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      style="height: 100%;"
    >
      <div
        class="template-studio-sub-header-left-view-mock"
      />
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="PillToggle--optionBtns visualYamlToggle"
        >
          <div
            class="PillToggle--item PillToggle--selected"
            data-name="toggle-option-one"
            role="button"
            tabindex="0"
          >
            VISUAL
          </div>
          <div
            class="PillToggle--item"
            data-name="toggle-option-two"
            role="button"
            tabindex="0"
          >
            YAML
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main"
            >
              <span
                class="bp3-icon bp3-icon-eye-open StyledProps--main StyledProps--color StyledProps--color-orange800"
                icon="eye-open"
              >
                <svg
                  data-icon="eye-open"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    eye-open
                  </desc>
                  <path
                    d="M8.002 7.003a1.003 1.003 0 000 2.005 1.003 1.003 0 000-2.005zm7.988.972v-.02-.01-.02-.02a.675.675 0 00-.17-.36c-.509-.673-1.118-1.264-1.737-1.806-1.328-1.173-2.846-2.155-4.523-2.546a6.702 6.702 0 00-2.925-.06c-.889.18-1.738.541-2.546.992C2.84 4.837 1.692 5.81.694 6.902c-.18.211-.36.411-.53.632a.742.742 0 000 .932c.51.672 1.119 1.264 1.738 1.805 1.328 1.173 2.846 2.156 4.523 2.547.968.23 1.947.24 2.925.04.889-.18 1.738-.542 2.546-.993 1.248-.712 2.397-1.684 3.395-2.777.18-.2.37-.411.54-.632.09-.1.149-.23.169-.36v-.02-.02-.01-.02-.03c0-.01-.01-.01-.01-.02zm-7.988 3.038a2.998 2.998 0 01-2.995-3.008 2.998 2.998 0 012.995-3.008 2.998 2.998 0 012.996 3.008 2.998 2.998 0 01-2.996 3.008z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps--font StyledProps--main StyledProps--color StyledProps--color-orange800 StyledProps--font-size-small"
              >
                common.readonlyPermissions
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TemplateStudioSubHeader tests should match snapshot when template is updated 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main subHeader StyledProps--padding-right-xlarge StyledProps--padding-left-xlarge StyledProps--border StyledProps--border-bottom StyledProps--border-color-grey200 StyledProps--background-white"
    style="height: 49px;"
  >
    <div
      class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-space-between"
      style="height: 100%;"
    >
      <div
        class="template-studio-sub-header-left-view-mock"
      />
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="PillToggle--optionBtns visualYamlToggle"
        >
          <div
            class="PillToggle--item PillToggle--selected"
            data-name="toggle-option-one"
            role="button"
            tabindex="0"
          >
            VISUAL
          </div>
          <div
            class="PillToggle--item"
            data-name="toggle-option-two"
            role="button"
            tabindex="0"
          >
            YAML
          </div>
        </div>
      </div>
      <div
        class="StyledProps--font StyledProps--main"
      >
        <div
          class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
        >
          <p
            class="StyledProps--font StyledProps--main tagRender StyledProps--color StyledProps--color-orange600 StyledProps--font-size-small"
          >
            unsavedChanges
          </p>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center"
            >
              <div
                class="save-template-popover-mock"
              />
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  common.discard
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
